tests/baselines/reference/augmentExportEquals3_1.errors.txt
tests/cases/compiler/file2.ts(7,15): error TS2665: Module augmentation cannot introduce new names in the top level scope.
tests/cases/compiler/file2.ts(8,9): error TS2665: Module augmentation cannot introduce new names in the top level scope.


==== tests/cases/compiler/file1.d.ts (0 errors) ====
    declare module "file1" {
        function foo(): void;
        namespace foo {
            export var v: number;
        }
        export = foo;
    }
    
    
==== tests/cases/compiler/file2.ts (2 errors) ====
    /// <reference path="file1.d.ts"/>
    import x = require("file1"); 
    x.b = 1;
    
    // OK - './file1' is a namespace
    declare module "file1" {
        interface A { a }
                  ~
!!! error TS2665: Module augmentation cannot introduce new names in the top level scope.
        let b: number;
            ~
!!! error TS2665: Module augmentation cannot introduce new names in the top level scope.
    }
    
==== tests/cases/compiler/file3.ts (0 errors) ====
    import * as x from "file1";
    import "file2";
    let a: x.A;
    let b = x.b;